// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OTUToolbar /> should render 1`] = `
<Toolbar>
  <SearchInput
    onChange={[Function]}
    placeholder="Name or abbreviation"
    value="foo"
  />
  <Toolbar__FilterButton
    active={false}
    id="verified-button"
    onClick={[Function]}
    tip="Filter Unverified"
  >
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="filter"
    />
  </Toolbar__FilterButton>
  <LinkButton
    color="blue"
    icon="plus-square"
    replace={true}
    tip="Create"
    tipPlacement="top"
    to={
      Object {
        "state": Object {
          "createOTU": true,
        },
      }
    }
  />
</Toolbar>
`;

exports[`<OTUToolbar /> should render when [verified=true] 1`] = `
<Toolbar>
  <SearchInput
    onChange={[Function]}
    placeholder="Name or abbreviation"
    value="foo"
  />
  <Toolbar__FilterButton
    active={true}
    id="verified-button"
    onClick={[Function]}
    tip="Filter Unverified"
  >
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="filter"
    />
  </Toolbar__FilterButton>
  <LinkButton
    color="blue"
    icon="plus-square"
    replace={true}
    tip="Create"
    tipPlacement="top"
    to={
      Object {
        "state": Object {
          "createOTU": true,
        },
      }
    }
  />
</Toolbar>
`;
